dev/hindsight/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hindsight
  namespace: hindsight
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hindsight.mtaku3.com`) && PathPrefix(`/v1`)
      priority: 100
      services:
        - name: hindsight-api
          port: 8888
    - kind: Rule
      match: Host(`hindsight.mtaku3.com`)
      priority: 10
      services:
        - name: hindsight-control-plane
          port: 3000
  tls:
    secretName: web-tls-cert
